# Bigraph

./: .coveragerc  .gitignore  License.txt  README.md  main.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py
bigraph/: __init__.py  algorithms.py  bigraph.py  predict.py
bigraph/evaluation/: __init__.py  evaluation.py
bigraph/inputs/: Place your dataset here!  id_labels.csv
bigraph/inputs2/: neighbour_matrix.csv
bigraph/preprocessing/: __init__.py  getAdjacents.py  get_adjacents.py  importFiles.py  import_files.py  makeGraph.py  make_graph.py  pdToList.py  pd_to_list.py
docs/source/: bigraph.evaluation.rst  bigraph.rst  conf.py  index.rst
evaluation/: evaluation.py
helperFunctions/: getAdjacents.py  importFiles.py  makeGraph.py  pdToList.py
inputs/: Place your dataset here!  id_labels.csv  neighbour_matrix.csv
outputs/: Probiotic_icd.gexf  graph2.json
predict/: algorithms.py  predict.py
predictionMethods/: algorithms.py  predict.py
preprocessing/: makeGraph.py
requirements/: default.txt  developer.txt
tests/data/inputs/: id_labels.csv  neighbour_matrix.csv
tests/data/target_predictions/: adamic_adar.csv
tests/unit/: tests.py
