[tool.poetry]
name = "bigraph"
version = "0.1.0"
description = ""
authors = ["sigma1326 <taleb.zarhesh@gmail.com>" ,"soran-ghaderi <soran.gdr.cs@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
networkx = "^2.6.3"
tabulate = "^0.8.9"
pandas = "^1.4.1"
scipy = "^1.8.1"
matplotlib = "^3.5.2"
scikit-learn = "^1.1.1"
numpy = "^1.22.4"
Pygments = "^2.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

